LH fix for overlaying overflow

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ pre#code {
 }
 
 pre li {
-	line-height: 5px !important;	
+	line-height: 8px !important;	
 }
 
 .mycode {
